[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurochat"
version = "0.1.0"
description = "EEG-based engagement scoring sidecar for neuroadaptive chatbots (Pope et al. 1995 engagement index)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Arnav Shukla" }]
keywords = ["eeg", "bci", "engagement", "muse", "neuroadaptive", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/ShuklaA11/neurochat"
Issues = "https://github.com/ShuklaA11/neurochat/issues"

[tool.setuptools]
py-modules = ["scorer", "server"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
